[package]
name = "htscodecs-sys"
version = "1.2.1"
edition = "2021"
description = "FFI bindings for htscodecs.\n\nhtscodecs is automatically built and linked statically. Requires a C compiler."
categories = [ "external-ffi-bindings", "encoding" ]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
include = ["src/**/*", "vendor/**/*", "Cargo.toml", "README.md"]
keywords = ["htscodecs", "rANS", "ANS", "static"]
readme = "README.md"
repository = "https://github.com/m4tx/htscodecs-sys.git"
homepage = "https://github.com/m4tx/htscodecs-sys"
license = "BSD-3-Clause"
build = "src/build.rs"
links = "htscodecs"

[dependencies]
libc = "0.2.121"

[build-dependencies]
cc = { version = "1.0.73", features = ["parallel"] }
dunce = "1.0.2"

[lib]
name = "htscodecs_sys"
crate-type = ["staticlib", "cdylib", "lib"]
